--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href ="/Users/david/Documents/projects/broadway/resources/css/style.css" type ="text/css" rel="stylesheet">
+<link href ="https://github.com/douchevid/douchevidbroad.github.io/blob/master/resources/css/style.css" type ="text/css" rel="stylesheet">
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
